XIVY-12261 added connection between dropdowns